test/inference/bad/typeclass_let_bound_and_overload.mlt
let equal = 1
type bool = True | False
class Eq 'a { equal : 'a -> 'a -> bool }
instance Eq int { equal = fun x y -> True }

